@@ -1,3 +1,6 @@
+05/06/2009
+- allow that plugins_dir folder names can end without directory separator
+
 05/05/2009
 - fixed E_STRICT incompabilities
 - {function} tag bug fix 
